# amcl_nonlinear_optimization

./: .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md  amcl.sh  local_relocalizer_2d.sh  package.xml  pgm+ref_to_json.py  pgm_relocalization.sh  ref.sh  reflector_editor.py  relocalization-stable（复件）.sh  relocalization.sh  relocalization_amcl.sh
agv_urdf/: Y991B020189BC0018.urdf  abtr006.urdf  abtr2511011.urdf  abtrtest.urdf  abtrtest1.urdf
analysis/: hw_config.json  send_static_tf.py  send_static_tf.sh
config/amcl/: abtr251229_9.yaml  abtr_ref.yaml  abtrbase.yaml  georef.yaml  runda.yaml
config/initial_pose/fixed/: abtr251229.yaml  abtr251229_9.yaml  abtr251229_9_l1.yaml  abtr_new_l1.yaml  abtr_ref.yaml  abtrbase_l1.yaml  abtrref.停顿位置sh  runda.yaml
config/initial_pose/last/: abtr251229.yaml  abtr251229_9.yaml  abtr251229_9_l1.yaml  abtr_f.yaml  abtr_new_l1.yaml  abtr_ref.yaml  abtrf_l1.yaml  georef.yaml  runda.yaml
config/interface/: interface.yaml
config/ndt/: abtr251229.yaml  abtr251229_9.yaml  abtr251229_9_l1.yaml  abtr_new_l1.yaml  abtr_ref.yaml  abtrbase_l1.yaml  abtrf_l1.yaml  runda.yaml
config/run/: run.yaml
include/localization_ndt/: diagnostics_dtc_publisher.hpp  distance_field_2d.hpp  dynamic_point_filter.hpp  initial_pose_manager.hpp  local_relocalizer_2d.hpp  map_json_utils.hpp  map_processing.hpp  ndt_localizer_node.hpp  ndt_matcher.hpp  relocalization_manager.hpp  simple_predictor.hpp  types.hpp
include/localization_ndt/config/: ndt_localizer_config.hpp  params_yaml.hpp  run_config.hpp  yaml_utils.hpp
include/nav2_amcl/: angleutils.hpp  portable_utils.hpp
include/nav2_amcl/map/: map.hpp
include/nav2_amcl/motion_model/: differential_motion_model.hpp  motion_model.hpp
include/nav2_amcl/pf/: eig3.hpp  pf.hpp  pf_kdtree.hpp  pf_pdf.hpp  pf_vector.hpp
include/nav2_amcl/sensors/laser/: laser.hpp
launch/: amcl_localization.launch  csm_localization.launch  debug_amcl_localization.launch  debug_localization.launch  debug_urdf_localization.launch  localization.launch  urdf_localization.launch
log/: amcl_log.sh
map/: abtr_f.json.bak  abtr_f.yaml  relocalization.rviz
src/: amcl_localizer_node.cpp  csm_localizer_node.cpp  distance_field_2d.cpp  dynamic_point_filter.cpp  initial_pose_manager.cpp  local_relocalizer_2d.cpp  map_json_utils.cpp  ndt_localizer_node.cpp  ndt_localizer_node_init.cpp  relocalization_manager.cpp
src/config/: ndt_localizer_config.cpp  params_yaml.cpp  run_config.cpp  yaml_utils.cpp
src/nav2_amcl_vendor/map/: map.c  map_cspace.cpp
src/nav2_amcl_vendor/motion_model/: differential_motion_model.cpp
src/nav2_amcl_vendor/pf/: eig3.c  pf.c  pf_kdtree.c  pf_pdf.c  pf_vector.c
src/nav2_amcl_vendor/sensors/laser/: laser.cpp  likelihood_field_model.cpp  likelihood_field_model_prob.cpp
